refactor : OrderIntegrationService의 mock 함수를 product 도메인으로 이동