@@ -5,6 +5,7 @@ import io.github.spartateam6.commercepaymentsystem.domain.cart.service.CartServi
 import io.github.spartateam6.commercepaymentsystem.domain.member.entity.Member;
 import io.github.spartateam6.commercepaymentsystem.domain.member.repository.MemberRepository;
 import io.github.spartateam6.commercepaymentsystem.domain.order.entity.Order;
+import io.github.spartateam6.commercepaymentsystem.domain.product.dto.response.ProductForOrderResponse;
 import io.github.spartateam6.commercepaymentsystem.domain.product.dto.response.ProductResponse;
 import io.github.spartateam6.commercepaymentsystem.domain.product.entity.Product;
 import io.github.spartateam6.commercepaymentsystem.domain.product.repository.ProductRepository;
@@ -67,68 +68,68 @@ public class OrderIntegrationService {
 
     /**
      * 미리보기용 상품 조회. 재고는 변경하지 않는다.
-     */
-    public synchronized Map<Long, ProductForOrder> getProducts(Set<Long> productIds) {
-        return loadProducts(productIds);
-    }
+//     */
+//    public synchronized Map<Long, ProductForOrderResponse> getProducts(Set<Long> productIds) {
+//        return loadProducts(productIds);
+//    }
 
     /**
      * 상품 도메인에 아직 없는 주문용 재고 예약 Mock이다.
      * 모든 상품을 먼저 검증한 뒤 하나도 부족하지 않을 때만 전체 차감한다.
      */
-    public synchronized Map<Long, ProductForOrder> validateAndDecreaseStocks(
-            Map<Long, Integer> orderQuantities
-    ) {
-        ensureTransactionActive();
-
-        List<Long> sortedProductIds = orderQuantities.keySet()
-                .stream()
-                .sorted()
-                .toList();
-
-        Map<Long, ProductForOrder> products = loadProducts(Set.copyOf(sortedProductIds));
-
-        if (!products.keySet().equals(orderQuantities.keySet())) {
-            throw new BusinessException(ErrorCode.INVALID_ORDER_ITEM_SELECTION);
-        }
-
-        for (Long productId : sortedProductIds) {
-            Integer quantity = orderQuantities.get(productId);
-            ProductForOrder product = products.get(productId);
-
-            if (quantity == null || quantity <= 0) {
-                throw new BusinessException(ErrorCode.INVALID_ORDER_ITEM_SELECTION);
-            }
-
-            if (product.stock() < quantity) {
-                throw new BusinessException(
-                        ErrorCode.ORDER_STOCK_INSUFFICIENT,
-                        product.productName() + "의 재고가 부족합니다."
-                );
-            }
-        }
-
-        for (Long productId : sortedProductIds) {
-            mockStocks.get(productId).decrease(orderQuantities.get(productId));
-        }
-
-        registerRollbackAction(() -> {
-            synchronized (OrderIntegrationService.this) {
-                orderQuantities.forEach((productId, quantity) -> {
-                    MutableStock stock = mockStocks.get(productId);
-                    if (stock != null) {
-                        stock.increase(quantity);
-                    }
-                });
-            }
-        });
-
-        /*
-         * 차감 전 스냅샷을 반환한다. 주문 금액과 재고 검증은 주문 시점 값을
-         * 사용하고, 이후 조회에서는 mockStocks의 차감된 재고가 사용된다.
-         */
-        return products;
-    }
+//    public synchronized Map<Long, ProductForOrderResponse> validateAndDecreaseStocks(
+//            Map<Long, Integer> orderQuantities
+//    ) {
+//        ensureTransactionActive();
+//
+//        List<Long> sortedProductIds = orderQuantities.keySet()
+//                .stream()
+//                .sorted()
+//                .toList();
+//
+//        Map<Long, ProductForOrder> products = loadProducts(Set.copyOf(sortedProductIds));
+//
+//        if (!products.keySet().equals(orderQuantities.keySet())) {
+//            throw new BusinessException(ErrorCode.INVALID_ORDER_ITEM_SELECTION);
+//        }
+//
+//        for (Long productId : sortedProductIds) {
+//            Integer quantity = orderQuantities.get(productId);
+//            ProductForOrder product = products.get(productId);
+//
+//            if (quantity == null || quantity <= 0) {
+//                throw new BusinessException(ErrorCode.INVALID_ORDER_ITEM_SELECTION);
+//            }
+//
+//            if (product.stock() < quantity) {
+//                throw new BusinessException(
+//                        ErrorCode.ORDER_STOCK_INSUFFICIENT,
+//                        product.productName() + "의 재고가 부족합니다."
+//                );
+//            }
+//        }
+//
+//        for (Long productId : sortedProductIds) {
+//            mockStocks.get(productId).decrease(orderQuantities.get(productId));
+//        }
+//
+//        registerRollbackAction(() -> {
+//            synchronized (OrderIntegrationService.this) {
+//                orderQuantities.forEach((productId, quantity) -> {
+//                    MutableStock stock = mockStocks.get(productId);
+//                    if (stock != null) {
+//                        stock.increase(quantity);
+//                    }
+//                });
+//            }
+//        });
+//
+//        /*
+//         * 차감 전 스냅샷을 반환한다. 주문 금액과 재고 검증은 주문 시점 값을
+//         * 사용하고, 이후 조회에서는 mockStocks의 차감된 재고가 사용된다.
+//         */
+//        return products;
+//    }
 
     /**
      * 결제 도메인에 아직 없는 결제 대기 생성 Mock이다.
@@ -160,45 +161,45 @@ public class OrderIntegrationService {
         return Optional.ofNullable(mockPayments.get(orderId));
     }
 
-    private Map<Long, ProductForOrder> loadProducts(Set<Long> productIds) {
-        if (productIds.isEmpty()) {
-            return Map.of();
-        }
-
-        Map<Long, Product> entityMap = productRepository.findAllById(productIds)
-                .stream()
-                .collect(Collectors.toMap(Product::getId, Function.identity()));
-
-        Map<Long, ProductForOrder> result = new LinkedHashMap<>();
-
-        productIds.stream()
-                .sorted(Comparator.naturalOrder())
-                .forEach(productId -> {
-                    Product product = entityMap.get(productId);
-
-                    if (product == null) {
-                        throw new BusinessException(ErrorCode.PRODUCT_NOT_FOUND);
-                    }
-
-                    MutableStock stock = mockStocks.computeIfAbsent(
-                            productId,
-                            ignored -> new MutableStock(product.getStock())
-                    );
-
-                    result.put(
-                            productId,
-                            new ProductForOrder(
-                                    product,
-                                    productId,
-                                    product.getName(),
-                                    product.getPrice(),
-                                    stock.value()
-                            )
-                    );
-                });
-
-        return Collections.unmodifiableMap(result);
-    }
+//    private Map<Long, ProductForOrder> loadProducts(Set<Long> productIds) {
+//        if (productIds.isEmpty()) {
+//            return Map.of();
+//        }
+//
+//        Map<Long, Product> entityMap = productRepository.findAllById(productIds)
+//                .stream()
+//                .collect(Collectors.toMap(Product::getId, Function.identity()));
+//
+//        Map<Long, ProductForOrder> result = new LinkedHashMap<>();
+//
+//        productIds.stream()
+//                .sorted(Comparator.naturalOrder())
+//                .forEach(productId -> {
+//                    Product product = entityMap.get(productId);
+//
+//                    if (product == null) {
+//                        throw new BusinessException(ErrorCode.PRODUCT_NOT_FOUND);
+//                    }
+//
+//                    MutableStock stock = mockStocks.computeIfAbsent(
+//                            productId,
+//                            ignored -> new MutableStock(product.getStock())
+//                    );
+//
+//                    result.put(
+//                            productId,
+//                            new ProductForOrder(
+//                                    product,
+//                                    productId,
+//                                    product.getName(),
+//                                    product.getPrice(),
+//                                    stock.value()
+//                            )
+//                    );
+//                });
+//
+//        return Collections.unmodifiableMap(result);
+//    }
 
     private void ensureTransactionActive() {
         if (!TransactionSynchronizationManager.isSynchronizationActive()) {
@@ -226,14 +227,14 @@ public class OrderIntegrationService {
 //    ) {
 //    }
 
-    public record ProductForOrder(
-            Product product,
-            Long productId,
-            String productName,
-            Integer unitPrice,
-            Integer stock
-    ) {
-    }
+//    public record ProductForOrder(
+//            Product product,
+//            Long productId,
+//            String productName,
+//            Integer unitPrice,
+//            Integer stock
+//    ) {
+//    }
 
     public record PaymentInformation(
             Long paymentId,
